# WeChatCtrlSDK_Dev

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CtrlSDK.cpp  Download.cpp  Download.h  EncryptUtil.cpp  EncryptUtil.h  FileUtil.cpp  FileUtil.h  HttpUtil.cpp  HttpUtil.h  Log.cpp  Log.h  MD5.cpp  MD5.h  httpPostModule.cpp  httpPostModule.h  web_task.cpp
app/src/main/java/com/developer/jyong/wechatctrlsdk/: CtrlSDK.java  Init.java  MainActivity.java  ReflexUtil.java
app/src/main/java/com/developer/jyong/wechatctrlsdk/inject/core/contact/: Contact.java  ContactCallback.java  ContactListener.java  ContactTool.java
app/src/main/java/com/developer/jyong/wechatctrlsdk/inject/core/main/: Booter.java  Callback.java  Confige.java  Configurator.java  DBInvader.java  (+6 more)
app/src/main/java/com/developer/jyong/wechatctrlsdk/inject/info/: ContactInfo.java  Info.java  LinkInfo.java  MediaInfo.java  MsgInfo.java  RemittanceInfo.java  RequestInfo.java  RoomInfo.java
app/src/main/java/com/developer/jyong/wechatctrlsdk/inject/proxy/: ContactProxy.java  EmiterProxy.java  ListenerProxy.java  MomentProxy.java  RoomProxy.java
app/src/main/java/com/developer/jyong/wechatctrlsdk/inject/tool/: DBTool.java  DialogUtils.java  DpPxSpTransformUtil.java  EventTool.java  FieldTool.java  FileTool.java  HookProxy.java  MD5Utils.java  TLog.java  WeChatTool.java  XmlParse.java  XposedInjectMethodProxy.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
(+9 files in other folders)
